--- a/rchat-client/src/main/resources/layout/main.fxml
+++ b/rchat-client/src/main/resources/layout/main.fxml
@@ -4,22 +4,12 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.TextFlow?>
-<VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1"
+<VBox prefHeight="600.0" prefWidth="900.0"
+      xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="pl.nn44.rchat.client.controller.MainController">
-    <MenuBar VBox.vgrow="NEVER">
-        <Menu text="File">
-            <MenuItem mnemonicParsing="false" text="Exit"/>
-        </Menu>
-        <Menu text="Mode">
-            <RadioMenuItem mnemonicParsing="false" selected="true" text="Hessian">
-                <toggleGroup>
-                    <ToggleGroup fx:id="protocol"/>
-                </toggleGroup>
-            </RadioMenuItem>
-            <RadioMenuItem mnemonicParsing="false" text="Burlap" toggleGroup="$protocol"/>
-            <RadioMenuItem mnemonicParsing="false" text="XML-RPC" toggleGroup="$protocol"/>
-        </Menu>
-    </MenuBar>
+
+    <fx:include source="menu.fxml"/>
+
     <HBox VBox.vgrow="NEVER">
         <padding>
             <Insets bottom="3.0" left="3.0" right="3.0" top="3.0"/>
@@ -35,6 +25,7 @@
             </HBox.margin>
         </Label>
     </HBox>
+
     <SplitPane dividerPositions="0.25, 0.75" focusTraversable="true" VBox.vgrow="ALWAYS">
         <ListView/>
         <ScrollPane>
@@ -42,6 +33,7 @@
         </ScrollPane>
         <ListView/>
     </SplitPane>
+
     <HBox id="HBox" spacing="5.0" VBox.vgrow="NEVER">
         <padding>
             <Insets bottom="3.0" left="3.0" right="3.0" top="3.0"/>
