--- a/rchat-client/src/main/resources/layout/main.fxml
+++ b/rchat-client/src/main/resources/layout/main.fxml
@@ -26,19 +26,29 @@
         </Label>
     </HBox>
 
-    <SplitPane dividerPositions="0.25, 0.75" VBox.vgrow="ALWAYS">
-        <ListView/>
+    <SplitPane dividerPositions="0.15, 0.85" VBox.vgrow="ALWAYS">
+        <ListView fx:id="channels"/>
         <ScrollPane>
-            <TextFlow/>
+            <TextFlow fx:id="text"/>
         </ScrollPane>
-        <ListView/>
+        <ListView fx:id="users">
+            <contextMenu>
+                <ContextMenu>
+                    <items>
+                        <MenuItem mnemonicParsing="false" text="Kick"/>
+                        <MenuItem mnemonicParsing="false" text="Ban/Unban"/>
+                        <CheckMenuItem mnemonicParsing="false" text="Ignore/Unignore"/>
+                    </items>
+                </ContextMenu>
+            </contextMenu>
+        </ListView>
     </SplitPane>
 
     <HBox id="HBox" spacing="5.0" VBox.vgrow="NEVER">
         <padding>
             <Insets bottom="3.0" left="3.0" right="3.0" top="3.0"/>
         </padding>
-        <TextField HBox.hgrow="ALWAYS"/>
+        <TextField fx:id="message" HBox.hgrow="ALWAYS"/>
         <Button fx:id="send" mnemonicParsing="false" onAction="#sendClicked" text="Send"/>
     </HBox>
 </VBox>
