--- a/rchat-client/src/main/resources/layout/main.fxml
+++ b/rchat-client/src/main/resources/layout/main.fxml
@@ -28,9 +28,15 @@
 
     <SplitPane dividerPositions="0.15, 0.85" VBox.vgrow="ALWAYS">
         <ListView fx:id="channels"/>
-        <ScrollPane>
-            <TextFlow fx:id="text"/>
-        </ScrollPane>
+
+        <VBox prefHeight="200.0" prefWidth="100.0">
+            <TextField fx:id="topic" editable="false" focusTraversable="false"/>
+
+            <ScrollPane VBox.vgrow="ALWAYS">
+                <TextFlow fx:id="text"/>
+            </ScrollPane>
+        </VBox>
+
         <ListView fx:id="users">
             <contextMenu>
                 <ContextMenu>
