--- a/rchat-client/src/main/resources/layout/login.fxml
+++ b/rchat-client/src/main/resources/layout/login.fxml
@@ -6,7 +6,8 @@
       xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="pl.nn44.rchat.client.controller.LoginController">
 
-    <fx:include source="menu.fxml"/>
+    <fx:include source="menu.fxml" fx:id="menu"/>
+
     <AnchorPane prefHeight="100.0">
         <Label alignment="CENTER" contentDisplay="TOP" prefHeight="100.0"
                text="%fxml.login.welcome"
