--- a/rchat-client/src/main/resources/layout/login.fxml
+++ b/rchat-client/src/main/resources/layout/login.fxml
@@ -8,7 +8,7 @@
     <fx:include fx:id="menu" source="menu.fxml"/>
 
     <AnchorPane prefHeight="100.0">
-        <Label alignment="CENTER" contentDisplay="TOP" prefHeight="100.0" text="%fxml.login.welcom"
+        <Label alignment="CENTER" contentDisplay="TOP" prefHeight="100.0" text="%fxml.login.welcome"
                AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
                AnchorPane.topAnchor="0.0"/>
     </AnchorPane>
