--- a/rchat-client/src/main/resources/layout/main.fxml
+++ b/rchat-client/src/main/resources/layout/main.fxml
@@ -26,7 +26,7 @@
     </HBox>
 
     <SplitPane dividerPositions="0.15, 0.85" VBox.vgrow="ALWAYS">
-        <ListView fx:id="channels"/>
+        <ListView fx:id="channels" onMouseClicked="#onMouseClickedChannels"/>
 
         <VBox prefHeight="200.0" prefWidth="100.0">
             <TextField fx:id="topic" editable="false" focusTraversable="false"/>
