--- a/rchat-client/src/main/resources/layout/login.fxml
+++ b/rchat-client/src/main/resources/layout/login.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="pl.nn44.rchat.client.controller.LoginController">
+      fx:controller="pl.nn44.rchat.client.controller.LoginController" stylesheets="@style.css">
 
     <fx:include fx:id="menu" source="menu.fxml"/>
 
