--- a/rchat-client/src/main/resources/layout/main.fxml
+++ b/rchat-client/src/main/resources/layout/main.fxml
@@ -18,7 +18,7 @@
                 <Insets left="5.0"/>
             </padding>
         </Label>
-        <Label fx:id="status" HBox.hgrow="ALWAYS">
+        <Label fx:id="status" HBox.hgrow="ALWAYS" textFill="#da3407">
             <HBox.margin>
                 <Insets left="5.0"/>
             </HBox.margin>
