--- a/rchat-client/src/main/resources/layout/main.fxml
+++ b/rchat-client/src/main/resources/layout/main.fxml
@@ -26,7 +26,7 @@
     </HBox>
 
     <SplitPane dividerPositions="0.15, 0.85" VBox.vgrow="ALWAYS">
-        <ListView fx:id="channels" onMouseClicked="#onMouseClickedChannels"/>
+        <ListView fx:id="channels" onKeyTyped="#onKeyPressedChannels" onMouseClicked="#onMouseClickedChannels"/>
 
         <VBox prefHeight="200.0" prefWidth="100.0">
             <TextField fx:id="topic" editable="false" focusTraversable="false"/>
@@ -36,7 +36,7 @@
             </ScrollPane>
         </VBox>
 
-        <ListView fx:id="users"/>
+        <ListView fx:id="users" focusTraversable="false"/>
     </SplitPane>
 
     <HBox id="HBox" spacing="5.0" VBox.vgrow="NEVER">
@@ -44,6 +44,7 @@
             <Insets bottom="3.0" left="3.0" right="3.0" top="3.0"/>
         </padding>
         <TextField fx:id="message" onKeyPressed="#onKeyPressed" HBox.hgrow="ALWAYS"/>
-        <Button fx:id="send" mnemonicParsing="false" onAction="#sendClicked" text="%fxml.main.send"/>
+        <Button fx:id="send" focusTraversable="false" mnemonicParsing="false" onAction="#sendClicked"
+                text="%fxml.main.send"/>
     </HBox>
 </VBox>
