--- a/rchat-client/src/main/resources/layout/main.fxml
+++ b/rchat-client/src/main/resources/layout/main.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.TextFlow?>
@@ -29,10 +29,18 @@
         <ListView fx:id="channels" onKeyTyped="#onKeyPressedChannels" onMouseClicked="#onMouseClickedChannels"/>
 
         <VBox prefHeight="200.0" prefWidth="100.0">
-            <TextField fx:id="topic" editable="false" focusTraversable="false"/>
+            <TextField fx:id="topic" editable="false" focusTraversable="false">
+                <VBox.margin>
+                    <Insets/>
+                </VBox.margin>
+            </TextField>
 
             <ScrollPane VBox.vgrow="ALWAYS">
-                <TextFlow fx:id="text"/>
+                <TextFlow fx:id="text">
+                    <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                    </padding>
+                </TextFlow>
             </ScrollPane>
         </VBox>
 
