--- a/rchat-client/src/main/resources/layout/main.fxml
+++ b/rchat-client/src/main/resources/layout/main.fxml
@@ -35,7 +35,7 @@
                 </VBox.margin>
             </TextField>
 
-            <ScrollPane VBox.vgrow="ALWAYS">
+            <ScrollPane fx:id="textScroll" VBox.vgrow="ALWAYS">
                 <TextFlow fx:id="text">
                     <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
@@ -51,7 +51,7 @@
         <padding>
             <Insets bottom="3.0" left="3.0" right="3.0" top="3.0"/>
         </padding>
-        <TextField fx:id="message" onKeyPressed="#onKeyPressed" HBox.hgrow="ALWAYS"/>
+        <TextField fx:id="message" onKeyPressed="#onKeyMessagePressed" HBox.hgrow="ALWAYS"/>
         <Button fx:id="send" focusTraversable="false" mnemonicParsing="false" onAction="#sendClicked"
                 text="%fxml.main.send"/>
     </HBox>
